# resumer

./: .gitignore  README.md  pyproject.toml
examples/tex_1/resumer_workplace/: input.md  out.tex
examples/txt_1/: resume.txt
src/resumer/: cli.py  gen.py  generator.py  model.py  utils.py
src/resumer/core/: entry.py  generator.py
src/resumer/data/: awesome-cv.cls  awesome_ready.tex  tex_entry.tex  tex_header.tex  txt_entry.txt  txt_header.txt  txt_ready.txt
src/resumer/files/: awesome-cv.cls  tex_1.tex
src/resumer/presets/: default.toml  tex.toml  txt.toml
src/resumer/profiles/: __init__.py  awetex.py  txt.py
